--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
+<div class="row p-4">
+  <div *ngFor="let user of users.data;" class="col-sm-4">
+    <div class="card">
+      <img [src]="user.avatar" class="card-img-top img-fluid" alt="...">
+      <div class="card-body">
+        <h5 class="card-title text-center">{{user.first_name + " " + user.last_name}}</h5>
+        <p class="card-text lead text-center">Id : {{user.id}}</p>
+        <p class="card-text lead text-center">Email : {{user.email}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <nav aria-label="Page navigation example">
   <ul class="pagination">
     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
