--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="row p-4">
+<h1 class="text-center">List of Users Fetched from API and pagination.</h1>
+<div  class="row p-4">
   <div *ngFor="let user of users.data;" class="col-sm-4">
     <div class="card">
-      <img [src]="user.avatar" class="card-img-top img-fluid" alt="...">
+      <img [src]="user.avatar" height="350px" class="card-img-top img-fluid" alt="users image">
       <div class="card-body">
         <h5 class="card-title text-center">{{user.first_name + " " + user.last_name}}</h5>
         <p class="card-text lead text-center">Id : {{user.id}}</p>
@@ -12,13 +13,8 @@
 </div>
 
 
-
-<nav aria-label="Page navigation example">
-  <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+<nav style="cursor: pointer;" aria-label="Page navigation">
+  <ul id="paginition" class="pagination pagination-lg">
+    <li *ngFor="let val of array; let i = index;" (click)="handleFetch(val)"  class="page-item"><a class="page-link" >{{val}}</a></li>
   </ul>
 </nav>
